[project]
name = "lex-machina"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "langchain>=1.2.15",
    "langchain-community>=0.4.1",
    "pymupdf>=1.27.2.2",
    "pypdf>=6.10.2",
    "ruff>=0.15.11",
]
